--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,17 @@
 <html>
 <head>
   <title>LaAdventures</title>
+  <link rel="stylesheet" href="https://railsgirls.com/assets/bootstrap.css">
+  <link rel="stylesheet" href="https://railsgirls.com/assets/bottstrap-theme.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+	<%= yield %>
+</div>
 
 </body>
 </html>
