--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,31 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<footer>
+	<div class="container">
+		Rails Girls 2015
+	</div>
+</footer>
+<script src="https://railsgirls.com/assets/bootstrap.js"></script>		
 <body>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon bar"></span>
+					<span class="icon bar"></span>
+				</button>
+				<a class="navbar-brand" href="/"The L.A. Adventure App</a>
+			</div>	
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a hred="/adventures">Adventures</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>				
 
 <div class="container">
 	<%= yield %>
