--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a hred="/adventures">Adventures</a></li>
+					<li><%= link_to 'New Adventure', new_adventure_path %></li>
 				</ul>
 			</div>
 		</div>
