--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>LaAdventures</title>
-  <link rel="stylesheet" href="https://railsgirls.com/assets/bootstrap.css">
-  <link rel="stylesheet" href="https://railsgirls.com/assets/bottstrap-theme.css">
+  <link rel="stylesheet" href="//railsgirls.com/assets/bootstrap.css">
+  <link rel="stylesheet" href="//railsgirls.com/assets/bootstrap-theme.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -13,27 +13,26 @@
 		Rails Girls 2015
 	</div>
 </footer>
-<script src="https://railsgirls.com/assets/bootstrap.js"></script>		
+<script src="//railsgirls.com/assets/bootstrap.js"></script>		
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon bar"></span>
-					<span class="icon bar"></span>
-				</button>
-				<a class="navbar-brand" href="/"The L.A. Adventure App</a>
-			</div>	
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a hred="/adventures">Adventures</a></li>
-					<li><%= link_to 'New Adventure', new_adventure_path %></li>
-				</ul>
-			</div>
-		</div>
-	</nav>				
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">The L.A. Adventure App</a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/adventures">Adventures</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <div class="container">
 	<%= yield %>
